--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ menu {
     background-color: #F8EEE1;  
 }
 
-footer{
+footer {
+    text-align: center;
     color: #F8EEE1;
     background-color: #31302F;
 }
