스파르타 이미지 다운로드

--- a/css/wishlist.css
+++ b/css/wishlist.css
@@ -16,11 +16,11 @@ html {
     word-break: keep-all;
 }
 .img1 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-red.png");
+    background-image: url("/img/bucket-red.png");
     color: white;
 }
 .img2 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
+    background-image: url("/img/bucket-lightred.png");
     color: tomato;
 }
 .flex-row {
@@ -39,7 +39,7 @@ html {
     content: "";
     width: 70%;
     height: 70%;
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/stamp.png");
+    background-image: url("/img/stamp.png");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -54,7 +54,7 @@ html {
 }
 
 .bg-t2 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-grid.png");
+    background-image: url("/img/bg-grid.png");
     width: 360px;
     background-size: cover;
     background-position: center;
@@ -66,16 +66,16 @@ html {
     color: white;
 }
 .img1-t2 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-blue.png");
+    background-image: url("/img/bucket-blue.png");
     color: white;
 }
 .img2-t2 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightblue.png");
+    background-image: url("/img/bucket-lightblue.png");
     color: blue;
 }
 
 .bg-t3 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-paper.png");
+    background-image: url("/img/bg-paper.png");
     width: 360px;
     background-size: cover;
     background-position: center;
@@ -87,14 +87,14 @@ html {
     color: white;
 }
 .img1-t3 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-spa.png");
+    background-image: url("/img/bucket-spa.png");
 }
 .img2-t3 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-rtan.png");
+    background-image: url("/img/bucket-rtan.png");
 }
 
 .bg-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-sky.png");
+    background-image: url("/img/bg-sky.png");
     width: 360px;
     background-size: cover;
     background-position: center;
@@ -105,20 +105,20 @@ html {
     color: yellow;
 }
 .img1-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-shape1.png");
+    background-image: url("/img/bucket-shape1.png");
 }
 .img2-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-shape2.png");
+    background-image: url("/img/bucket-shape2.png");
 }
 .img3-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-shape3.png");
+    background-image: url("/img/bucket-shape3.png");
 }
 .img4-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-longshape1.png");
+    background-image: url("/img/bucket-longshape1.png");
     width: 300px;
 }
 .img5-t4 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-longshape2.png");
+    background-image: url("/img/bucket-longshape2.png");
     width: 300px;
     height: 200px;
 }
@@ -126,7 +126,7 @@ html {
     content: "";
     width: 100px;
     height: 100px;
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/stamp.png");
+    background-image: url("/img/stamp.png");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -138,7 +138,7 @@ html {
     color: tomato;
 }
 .bg-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-clay.png");
+    background-image: url("/img/bg-clay.png");
     background-size: cover;
     background-position: center;
     width: 360px;
@@ -146,42 +146,42 @@ html {
     background-position: center;
 }
 .img1-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic1.png");
+    background-image: url("/img/bucket-pic1.png");
 }
 .img2-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic2.png");
+    background-image: url("/img/bucket-pic2.png");
 }
 .img3-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic3.png");
+    background-image: url("/img/bucket-pic3.png");
 }
 .img4-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic4.png");
+    background-image: url("/img/bucket-pic4.png");
 }
 .img5-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic5.png");
+    background-image: url("/img/bucket-pic5.png");
 }
 .img6-t5 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-pic6.png");
+    background-image: url("/img/bucket-pic6.png");
 }
 
 .bg-t6 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-note.png");
+    background-image: url("/img/bg-note.png");
     color: black;
 }
 .title-t6 {
     background-color: none;
 }
 .img1-t6 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-highlight.png");
+    background-image: url("/img/bucket-highlight.png");
 }
 .img2-t6 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-throughline.png");
+    background-image: url("/img/bucket-throughline.png");
 }
 .img3-t6 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-colorpen1.png");
+    background-image: url("/img/bucket-colorpen1.png");
 }
 .img4-t6 {
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-colorpen2.png");
+    background-image: url("/img/bucket-colorpen2.png");
 }
 .bg-t6 h1, p {
     color: white;
@@ -199,7 +199,7 @@ html {
 
 .bg-t7 {
     max-width: 360px;
-    background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bg-red.png");   
+    background-image: url("/img/bg-red.png");   
     background-size: cover;
     background-position: center;
 
